--- a/Marketing/dashboard/acmedash/templates/acmedash/index.html
+++ b/Marketing/dashboard/acmedash/templates/acmedash/index.html
@@ -29,7 +29,7 @@
 	</div>
       </div>
       <div class="panel-body"> 
-	Explore and understand tags 
+	Dummy explore dataset 
 	<a class="pull-right" href="">
 	  <div class="text-success">{% fontawesome_icon 'arrow-circle-right' %}</div>
 	</a>	
