--- a/IT/dashboard/team/templates/team/jira.html
+++ b/IT/dashboard/team/templates/team/jira.html
@@ -47,9 +47,10 @@
 <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab" class="bg-primary" href="#members">{% fontawesome_icon 'user' %} members</a></li>
   <li><a data-toggle="tab" class="bg-primary" href="#projects">{% fontawesome_icon 'cog' %} Projects</a></li>
+  <li><a data-toggle="tab" class="bg-primary" href="#data">{% fontawesome_icon 'table' %} Input</a></li>  
   <li> <a class="bg-primary"
 	  href="{% url 'dashboard:run_index' customer.org.name 'TeamPerformance' %}">
-      {% fontawesome_icon 'spinner' %} Dataset 
+      {% fontawesome_icon 'search' %} Audit
     </a></li>
 
 </ul>
@@ -58,9 +59,12 @@
   <div id="members" class="tab-pane fade in active">
     {% include 'team/_members.html' with members=members customer=customer basenamespace=basenamespace %} 
   </div>
+  <div id="data" class="tab-pane fade">      
+    {% include 'team/_rawdata.html' with rawdata=rawdata customer=customer basenamespace=basenamespace %} 
+  </div>
   <div id="projects" class="tab-pane fade">      
     {% include 'team/_projects.html' with projects=projects customer=customer basenamespace=basenamespace %} 
-  </div>
+  </div>  
 </div>
 
 <script>
