--- a/IT/dashboard/team/templates/team/index.html
+++ b/IT/dashboard/team/templates/team/index.html
@@ -21,6 +21,7 @@ productionizing this work. </p>
   
 <hr>
 <div class="row">
+
   <div class="col-md-4">
     <div class="panel panel-success">
       <div class="panel-heading clearfix">
@@ -28,17 +29,37 @@ productionizing this work. </p>
 	  {% fontawesome_icon 'binoculars' %} 
 	</div>
 	<div class="text-right pull-right xlarge-text">
-	  JIRA Analysis
+	  JIRA
 	</div>
       </div>
       <div class="panel-body">
-	Structural information from JIRA
+	Ticket metadata analysis
 	<a class="pull-right" 
 	   href="{% url 'team:jira' %}">
 	  <div class="text-success">{% fontawesome_icon 'arrow-circle-right' %}</div>
-	
+	</a>
       </div>
     </div>
   </div>
+
+  <div class="col-md-4">
+    <div class="panel panel-success">
+      <div class="panel-heading clearfix">
+	<div class="xlarge-text pull-left text-right">
+	  {% fontawesome_icon 'binoculars' %} 
+	</div>
+	<div class="text-right pull-right xlarge-text">
+	  ServiceDesk
+	</div>
+      </div>
+      <div class="panel-body">
+	Support Data Analysis 
+	<a class="pull-right">
+	  <div class="text-success">{% fontawesome_icon 'arrow-circle-right' %}</div>
+	</a>
+      </div>
+    </div>
+  </div>  
+
 </div>
 {% endblock content %}
