--- a/Lending/dashboard/lendingcore/templates/lendingcore/index.html
+++ b/Lending/dashboard/lendingcore/templates/lendingcore/index.html
@@ -16,6 +16,7 @@
 <h3 class="text-center">Lending Core Dashboard</h3>
 <hr>
 <div class="row">
+  <!-- 
   <div class="col-md-4">
     <div class="panel panel-success">
       <div class="panel-heading clearfix">
@@ -27,13 +28,33 @@
 	</div>
       </div>
       <div class="panel-body">
-	Check and manage deployment 
+	Check and manage deployment
 	<a class="pull-right" 
 	   href="{% url 'lendingcore:overview:index' %}">
-	  <div class="text-success">{% fontawesome_icon 'arrow-circle-right' %}</div>
-	
+	  <div class="text-success">{% fontawesome_icon 'arrow-circle-right' %} </div>
+	</a>
       </div>
     </div>
   </div>
+  -->
+  <div class="col-md-4">
+    <div class="panel panel-success">
+      <div class="panel-heading clearfix">
+	<div class="xlarge-text pull-left text-right">
+	  {% fontawesome_icon 'binoculars' %} 
+	</div>
+	<div class="text-right pull-right xlarge-text">
+	 Control Center 
+	</div>
+      </div>
+      <div class="panel-body">
+        Manage the Platform	
+	<a class="pull-right" 
+	   href="{% url 'lendingcore:control:index' %}">
+	  <div class="text-success">{% fontawesome_icon 'arrow-circle-right' %}</div>
+	</a>
+      </div>
+    </div>
+  </div>  
 </div>
 {% endblock content %}
