Transition to customer from usecase

--- a/IT/dashboard/team/templates/team/index.html
+++ b/IT/dashboard/team/templates/team/index.html
@@ -6,7 +6,7 @@
 <ol class="breadcrumb">
   <li><a href="/">Enrich</a></li>
   <li><a href="{% url 'dashboard:index' %}">Usecases</a></li>
-  <li><a href="{% app_url customer %}">{{customer.org.name}}</a></li>
+  <li><a href="{% app_url usecase %}">{{usecase.org.name}}</a></li>
   <li>Dashboard</li>
 </ol>
 {% endblock breadcrumbs %}
