--- a/Marketing/dashboard/acmedash/templates/acmedash/index.html
+++ b/Marketing/dashboard/acmedash/templates/acmedash/index.html
@@ -4,7 +4,7 @@
 {% block breadcrumbs %}
 <ol class="breadcrumb">
   <li><a href="/">Enrich</a></li>
-  <li><a href="/{{customer.urlprefix }}/">{{customer.org.name}}</a></li>
+  <li><a href="/{{usecase.urlprefix }}/">{{usecase.org.name}}</a></li>
   <li>Applications</li>
 </ol>
 {% endblock breadcrumbs %}
