--- a/IT/dashboard/team/templates/team/jira.html
+++ b/IT/dashboard/team/templates/team/jira.html
@@ -8,7 +8,7 @@
 <ol class="breadcrumb">
   <li><a href="/">Enrich</a></li>
   <li><a href="{% url 'dashboard:index' %}">Usecases</a></li>
-  <li><a href="{% app_url customer %}">{{customer.org.name}}</a></li>
+  <li><a href="{% app_url usecase %}">{{usecase.org.name}}</a></li>
   <li>Dashboard</li>
 </ol>
 {% endblock breadcrumbs %}
@@ -50,7 +50,7 @@
   <li><a data-toggle="tab" class="bg-primary" href="#projects">{% fontawesome_icon 'cog' %} Projects</a></li>
   <li><a data-toggle="tab" class="bg-primary" href="#data">{% fontawesome_icon 'table' %} Input</a></li>  
   <li> <a class="bg-primary"
-	  href="{% url 'dashboard:run_index' customer.org.name 'TeamPerformance' %}">
+	  href="{% url 'dashboard:run_index' usecase.org.name 'TeamPerformance' %}">
       {% fontawesome_icon 'search' %} Audit
     </a></li>
 
@@ -58,16 +58,16 @@
 
 <div class="tab-content">
   <div id="members" class="tab-pane fade in active">
-    {% include 'team/_members.html' with members=members customer=customer basenamespace=basenamespace %} 
+    {% include 'team/_members.html' with members=members usecase=usecase basenamespace=basenamespace %} 
   </div>
   <div id="teams" class="tab-pane fade">      
-    {% include 'team/_teams.html' with teams=teams customer=customer basenamespace=basenamespace %} 
+    {% include 'team/_teams.html' with teams=teams usecase=usecase basenamespace=basenamespace %} 
   </div>
   <div id="data" class="tab-pane fade">      
-    {% include 'team/_rawdata.html' with rawdata=rawdata customer=customer basenamespace=basenamespace %} 
+    {% include 'team/_rawdata.html' with rawdata=rawdata usecase=usecase basenamespace=basenamespace %} 
   </div>  
   <div id="projects" class="tab-pane fade">      
-    {% include 'team/_projects.html' with projects=projects customer=customer basenamespace=basenamespace %} 
+    {% include 'team/_projects.html' with projects=projects usecase=usecase basenamespace=basenamespace %} 
   </div>  
 </div>
 
