Override with customer specific colors

--- a/Lending/dashboard/lendingcore/static/gui2/appstore2/css/customer_theme.css
+++ b/Lending/dashboard/lendingcore/static/gui2/appstore2/css/customer_theme.css
@@ -1,4 +1,5 @@
 /* Default Color */
 .header-block{background:#297AB9;}
+.header-upper{background:#297AB9;}
 .tab-preview{background-color:#f6f9fc;}
 body {background-color:#f6f9fc!important;}
